# aios-thinktank

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  requirements-pi.txt  requirements.txt  run_tests.sh
.serena/: project.yml
.serena/memories/: motor-calibration.md
blog/: 02-build-day-1.md  03-build-day-2-first-movement.md  04-teaching-the-car-to-feel.md  05-follow-the-human.md  06-the-car-remembers.md  07-who-is-the-os-for.md
blog/aios-thinktank/: README.md
blog/aios-thinktank/hardware/: PARTS.md
blog/aios-thinktank/pi/: README.md
docs/: GETTING_STARTED.md  TODO.md  ULTRASONIC_WIRING.md  pi-rust-rewrite.md
docs/blog/: 01-unboxing.md  2026-01-25-first-drive.md
docs/superpowers/plans/: 2026-03-21-topological-map.md
docs/superpowers/specs/: 2026-03-21-topological-map-design.md
pi/: camera_streamer.py  car_hardware.py  config.py  motor_controller.py  network_client.py  ultrasonic_sensors.py
pi-rs/: Cargo.toml  Cross.toml
pi-rs/deploy/: cross.sh
pi-rs/src/: config.rs  lib.rs  main.rs  motors.rs  protocol.rs  sensors.rs
server/: README.md  command_generator.py  config.py  map_manager.py  network_server.py  server_control.py  training_logger.py  vision_model.py
shared/: protocol.py  utils.py
tests/: simulate_car.py  test_command_generator.py  test_map_manager.py  test_protocol.py
